# caa

./: README.md  vault_history_commands.txt
challenges/: crack.sage  crack.sage.py  ecdsa.c  ecdsa.h  main.c  message.txt
challenges/reverse_ecdsa/: CMakeLists.txt  ecdsa.c  main.c
labo_01/: config.hcl  heig-vd-wildcard.pem  intermediate.cert.pem  intra-policy.hcl  intra.heig-vd.ch.pem  pki_intermediate.csr  root__heig_vd_2024_ca.crt  setup_vault_script.bs  setup_vault_script.sh  vault-cluster-vault-2024-09-23T11_30_25.363Z.json
labo_01/vault/data/core/: _audit  _auth  _master  (+7 more)
labo_02/: ecdsa.sage  ecdsa.sage.py
labo_02/rayburn_nathan_caa_labo2/: ecdsa.sage
mini/client/: Cargo.toml
mini/client/src/: main.rs
mini/python/: client.py  local_message.py  message.py  messages.json  server.py  users.json
mini/python/client_database/: db_local_message.py
mini/python/database/: db_message.py  db_user.py
mini/python/dataclass/: localmsg.py  msg.py
mini/python/utils/: crypto.py  signature.py  tools.py
mini/server/: Cargo.toml  generate_certs.sh  load_private_key.sh
mini/server/keys/: cert.pem  key.pem
mini/server/src/: main.rs
rootme/: crack.sage  pt.txt
rootme/chal011/: chal.sage  chal.sage.py
rootme/rsa_mult_reveiv/: main.py
scripts/: birthday_script.py
series/exo_1/: dh.c  orgin.py  prng.py  test.sage  test.sage.py
series/exo_2/: README.md
test/: admin-policy.hcl  setup_vault_script.bs
test_lab/: config.hcl  heig_vd_wildcard.pem  intermediate_cert.pem  intra_heig_vd_ch.pem  pki_intermediate.csr  root_heig_vd_2024_ca.crt  vault_keys.json
(+124 files in other folders)
